--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@reduxjs/toolkit": "^2.2.1",
+    "expo": "~50.0.7",
+    "expo-notifications": "^0.27.6",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
+    "redux-thunk": "^3.1.0",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
