--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-notifications": "^0.27.6",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-permissions": "^4.1.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
     "react-redux": "^9.1.0",
-    "redux-thunk": "^3.1.0",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3"
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
