--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~50.0.7",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
+    "expo-image-picker": "~14.7.1",
     "expo-notifications": "^0.27.6",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
@@ -27,7 +28,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
     "react-redux": "^9.1.0",
-    "expo-image-picker": "~14.7.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
